-Adding individual trip mapping

--- a/app/views/summaries/chart.html.erb
+++ b/app/views/summaries/chart.html.erb
@@ -74,5 +74,6 @@ function drawVisualization() {
 
 <h1>On-Time Chart for Bus 22 Inbound</h1>
 <h4>Less than 0 values imply that the bus came in early</h4>
+<h4>Spikes most likely imply that the bus never finished the route and was turned around early</h4>
 <div id="visualization" style="width: 1350px; height: 400px;"></div>
 
