--- a/app/views/runs/display_bus_route.html.erb
+++ b/app/views/runs/display_bus_route.html.erb
@@ -12,10 +12,16 @@ var berlin = new google.maps.LatLng(37.785816, -122.410186);
 	
   var markers = [];
   var iterator = 0;
+  var poly = new google.maps.Polyline({
+    strokeColor: "#FF0000",
+    strokeOpacity: 1.0,
+    strokeWeight: 2
+  });
+  var image = "/images/stop.gif";
 
   var map;
   var mapOptions = {
-      zoom: 14,
+      zoom: 12,
       mapTypeId: google.maps.MapTypeId.ROADMAP,
       center: berlin
     };
@@ -28,6 +34,7 @@ function init() {
 	//console.log("nbrs: ", neighborhoods);
 	document.getElementById("bus_id").innerHTML = bus_id;
 	drop();
+  poly.setMap(map);
 }
 	// Removes the overlays from the map, but keeps them in the array
 function clearOverlays(j) {
@@ -49,9 +56,16 @@ function clearAllOverlays() {
 
 
   function drop() {
+ 	var path = poly.getPath();
+
+
     for (var i = 0; i < neighborhoods.length; i++) {
       setTimeout(function(i, total) {
         addMarker();
+	path.push(neighborhoods[i]);
+	if (i % 100 == 0) {
+		 //clearOverlays(i);
+	}
 	document.getElementById("on_marker").innerHTML = i + "/" + total;
       }, i * 200, i, neighborhoods.length);
     }
@@ -62,7 +76,8 @@ function clearAllOverlays() {
       position: neighborhoods[iterator],
       map: map,
       draggable: false,
-      animation: google.maps.Animation.DROP
+      animation: google.maps.Animation.DROP,
+      icon:image
     }));
 
   	var d = new Date(parseFloat(times[iterator]*1000));
