--- a/app/views/runs/display_marker.html.erb
+++ b/app/views/runs/display_marker.html.erb
@@ -8,22 +8,14 @@
 <script type="text/javascript" src="muni_points.js"> </script>
 <script type="text/javascript" src="german_example.js"> </script>
 <script type="text/javascript">
-//var berlin = new google.maps.LatLng(37.785816, -122.410186);
-var berlin = new google.maps.LatLng(37.77258,-122.419517);
-var berlin = new google.maps.LatLng(37.76258,-122.419517);
+var berlin = new google.maps.LatLng(37.785816, -122.410186);
 	
   var markers = [];
   var iterator = 0;
-  var poly = new google.maps.Polyline({
-    strokeColor: "#FF0000",
-    strokeOpacity: 1.0,
-    strokeWeight: 2
-  });
-  var image = "/images/stop.gif";
 
   var map;
   var mapOptions = {
-      zoom: 13,
+      zoom: 14,
       mapTypeId: google.maps.MapTypeId.ROADMAP,
       center: berlin
     };
@@ -36,7 +28,6 @@ function init() {
 	//console.log("nbrs: ", neighborhoods);
 	document.getElementById("bus_id").innerHTML = bus_id;
 	drop();
-  poly.setMap(map);
 }
 	// Removes the overlays from the map, but keeps them in the array
 function clearOverlays(j) {
@@ -46,18 +37,6 @@ function clearOverlays(j) {
       		markers[i].setMap(null);
 	}
     }
-  }
-}
-function clearPath() {
-  if (poly) {
-	poly.setMap(null);
-	/*
-	var path = poly.getPath();
-	for (i in path) {
-		path[i].setMap(null);
-	}
-	//path.length = 0;
-	*/
   }
 }
 function clearAllOverlays() {
@@ -70,17 +49,11 @@ function clearAllOverlays() {
 
 
   function drop() {
- 	var path = poly.getPath();
-
-
     for (var i = 0; i < neighborhoods.length; i++) {
       setTimeout(function(i, total) {
         addMarker();
-	path.push(neighborhoods[i]);
 	if (i % 100 == 0) {
-		clearOverlays(i);
-		clearPath();
-		poly.setMap(map);
+		 clearOverlays(i);
 	}
 	document.getElementById("on_marker").innerHTML = i + "/" + total;
       }, i * 200, i, neighborhoods.length);
@@ -92,8 +65,7 @@ function clearAllOverlays() {
       position: neighborhoods[iterator],
       map: map,
       draggable: false,
-      animation: google.maps.Animation.DROP,
-      icon:image
+      animation: google.maps.Animation.DROP
     }));
 
   	var d = new Date(parseFloat(times[iterator]*1000));
